--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Gehaltsrechner</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="icon" type="image/png" href="img/favicon.png">
+
 </head>
 <body>
 
